--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -1,4 +1,4 @@
-Django>=3.0,<4.0
+Django==3.1.7
 psycopg2>=2.8
 markdown
 django-filter
@@ -6,3 +6,4 @@ djangorestframework
 django-cors-headers
 Pillow
 djangorestframework-simplejwt
+importlib_metadata==8.4.0
