Changes to Dockerfiles, HTTP requests still not working

--- a/frontend/docker-compose.yml
+++ b/frontend/docker-compose.yml
@@ -36,11 +36,11 @@ services:
     expose:
       - 1234
 
-  nginx:
-    build:
-      context: .
-      dockerfile: Dockerfile.nginx
-    ports:
-      - "80:80"
-    depends_on:
-      - angular
+  # nginx:
+  #   build:
+  #     context: .
+  #     dockerfile: Dockerfile.nginx
+  #   ports:
+  #     - "80:80"
+  #   depends_on:
+  #     - angular
