--- a/frontend/Dockerfile.test
+++ b/frontend/Dockerfile.test
@@ -2,7 +2,7 @@ FROM debian:bullseye
 
 RUN apt-get update && apt-get install -y \
     curl \
-    netcat-openbsd
+    netcat-traditional
 
-CMD ["nc", "-l", "1234"]
+CMD ["nc", "-l", "1234" ]
 
