Intentando montar nginx con gunicorn pero no se como montar el docker compose para no tener que montar todo en el contenedor de backend

--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -12,6 +12,7 @@ COPY requirements.txt /code/backend/
 COPY run.sh /code/backend/
 
 # Install dependencies
+RUN pip install --upgrade pip
 RUN pip install -r /code/backend/requirements.txt
 
 # Give permission
