--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -1,1 +1,16 @@
 #for keep the folder
+upstream django {
+ server 0.0.0.0:8000;
+}
+
+server {
+ listen 8000;
+
+ location / {
+  proxy_pass http://django;
+ }
+
+ location /static/ {
+  alias /static/;
+ }
+}
