gitignore and docker compose updated

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -36,10 +36,9 @@ services:
       context: ./frontend
       dockerfile: Dockerfile
     volumes:
-      - frontend/pong-app:/usr/src/app  # Montar el directorio local en el contenedor
+      - frontend-app:/usr/src/app  # Montar el directorio local en el contenedor
     ports:
       - "4200:4200"
-    command: npm run start  # Angular Dev Server
     depends_on:
       - backend
     networks:
@@ -58,10 +57,10 @@ networks:
     driver: bridge
 
 volumes:
-  postgres-data:
   frontend-app:
     name: frontend-app
-      driver_opts:
-        device: /home/vzayas-s/transcendence/frontend/pong-app/
-        o: bind
-        type: none 
+    driver_opts:
+      device: '/home/larrain/Desktop/transcendence/frontend/pong-app'
+      o: bind
+      type: none 
+  postgres-data:
