--- a/frontend/Dockerfile
+++ b/frontend/Dockerfile
@@ -2,21 +2,23 @@
 FROM node:20 as build
 
 # Establecer el directorio de trabajo dentro del contenedor
-WORKDIR /usr/src/app
-
+# RUN mkdir -p /usr/src/app/pong-app
+WORKDIR /usr/src/app/pong-app
 # Copiar el archivo package.json y package-lock.json (si existe)
-COPY ./pong-app/package*.json /usr/src/app/
 
-#RUN chmod -R 777 /usr/src/app 
 
+RUN npm install -g @angular/cli@17
+
+COPY ./entrypoint.sh /entrypoint.sh
+
+RUN chmod +x /entrypoint.sh
 # Instalar las dependencias del proyecto
-RUN npm install
 
 # Copiar el resto del código de la aplicación Angular
-COPY ./pong-app /usr/src/app
+# COPY ./pong-app /usr/src/app
 
 # Exponer el puerto en el que se ejecutará el servidor de desarrollo de Angular
-EXPOSE 4200
+# EXPOSE 4200
 
 # Ejecutar el servidor de desarrollo de Angular
-CMD ["npm", "run", "start"]
+ENTRYPOINT /entrypoint.sh
