--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,3 +1,63 @@
+# services:
+#   db:
+#     image: postgres
+#     volumes:
+#       - postgres-data:/var/lib/postgresql/data
+#     environment:
+#       - POSTGRES_DB=postgres
+#       - POSTGRES_USER=postgres
+#       - POSTGRES_PASSWORD=postgres
+#     networks:
+#       - app-network
+
+#   backend:
+#     build:
+#       context: ./backend
+#       dockerfile: Dockerfile
+#     volumes:
+#       - .:/code
+#     ports:
+#       - "8000:8000"
+#     # expose:
+#     #   - "8000"
+#     environment:
+#       - DB_NAME=postgres
+#       - DB_USER=postgres
+#       - DB_PASSWORD=postgres
+#       - DB_HOST=db
+#       - DB_PORT=5432
+#     depends_on:
+#       - db
+#     networks:
+#       - app-network
+
+#   frontend:
+#     build:
+#       context: ./frontend
+#       dockerfile: Dockerfile
+#     ports:
+#       - "4200:4200"
+#     depends_on:
+#       - backend
+#     networks:
+#       - app-network
+
+#   # nginx:
+#   #   image: nginx:latest
+#   #   ports:
+#   #     - "80:80"
+#   #   volumes:
+#   #   depends_on:
+#   #     - backend
+
+# networks:
+#   app-network:
+#     driver: bridge
+
+# volumes:
+#   postgres-data:
+
+
 services:
   db:
     image: postgres
@@ -10,6 +70,13 @@ services:
     networks:
       - app-network
 
+  redis:
+    image: redis:alpine
+    ports:
+      - "6379:6379"
+    networks:
+      - app-network
+
   backend:
     build:
       context: ./backend
@@ -18,16 +85,16 @@ services:
       - .:/code
     ports:
       - "8000:8000"
-    # expose:
-    #   - "8000"
     environment:
       - DB_NAME=postgres
       - DB_USER=postgres
       - DB_PASSWORD=postgres
       - DB_HOST=db
       - DB_PORT=5432
+      - REDIS_URL=redis://redis:6379/1
     depends_on:
       - db
+      - redis
     networks:
       - app-network
 
@@ -41,14 +108,6 @@ services:
       - backend
     networks:
       - app-network
-
-  # nginx:
-  #   image: nginx:latest
-  #   ports:
-  #     - "80:80"
-  #   volumes:
-  #   depends_on:
-  #     - backend
 
 networks:
   app-network:
