--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -60,9 +60,8 @@ volumes:
   frontend-app:
     name: frontend-app
     driver_opts:
-      device: '/sgoinfre/students/abasante/transcendence/frontend/pong-app'
+      device: '${PWD}/frontend/pong-app'
       o: bind
       type: none
   postgres-data:
       driver: local
-
