--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -21,7 +21,7 @@ services:
     volumes:
       - .:/code
     ports:
-      - "8000:8000"
+      - "8000:8000" 
     # expose:
     #   - "8000"
     environment:
@@ -32,6 +32,15 @@ services:
       - DB_PORT=5432
     depends_on:
       - db
+      - redis
+    networks:
+      - app-network
+    
+  redis:
+    image: redis:latest
+    container_name: redis
+    ports:
+      - "6380:6379"
     networks:
       - app-network
 
