--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -14,12 +14,12 @@ services:
       - app-network
 
 # # # Adding redis
-  redis:
-    image: redis:alpine
-    ports:
-      - "6379:6379"
-    networks:
-      - app-network
+  # redis:
+  #   image: redis:alpine
+  #   ports:
+  #     - "6379:6379"
+  #   networks:
+  #     - app-network
 
   backend:
     container_name: backend
@@ -42,14 +42,14 @@ services:
     depends_on:
       - db
       - redis
-  #   networks:
-  #     - app-network
+    networks:
+      - app-network
     
-  # redis:
-  #   image: redis:latest
-  #   container_name: redis
-  #   ports:
-  #     - "6380:6379"
+  redis:
+    image: redis:latest
+    container_name: redis
+    ports:
+      - "6379:6379"
     networks:
       - app-network
 
@@ -136,16 +136,14 @@ networks:
     driver: bridge
 
 volumes:
-<<<<<<< HEAD
-  frontend-app:
-    name: frontend-app
-    driver_opts:
-      device: '${PWD}/frontend/pong-app'
-      o: bind
-      type: none
-  postgres-data:
-      driver: local
-=======
+  # frontend-app:
+  #   name: frontend-app
+  #   driver_opts:
+  #     device: '${PWD}/frontend/pong-app'
+  #     o: bind
+  #     type: none
+  # postgres-data:
+  #     driver: local
   # frontend-app:
   #   name: frontend-app
   #   driver_opts:
@@ -156,4 +154,3 @@ volumes:
     driver: local
   grafana-storage: {}
   prometheus_data: {}
->>>>>>> main
