--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -63,7 +63,19 @@ services:
       - app-network
     env_file:
       - .env
-    
+
+  adminer:
+    container_name: adminer
+    image: adminer
+    restart: always
+    networks:
+      - app-network
+    ports:
+      - "8080:8080"
+      - "9876:8080"
+    depends_on:
+      - db
+
   # node-exporter:
   #   image: prom/node-exporter
   #   container_name: node-exporter
