solucionando errores de mergeo

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -150,6 +150,7 @@ volumes:
   #     o: bind
   #     type: none
   postgres-data:
+    name: postgres_data
     driver: local
   grafana-storage: {}
   prometheus_data: {}
