--- a/frontend/pong-app/projects/pong/tsconfig.app.json
+++ b/frontend/pong-app/projects/pong/tsconfig.app.json
@@ -4,13 +4,15 @@
   "compilerOptions": {
     "outDir": "../../out-tsc/app",
     "types": [
-      "node"
+      "node",
+      "@angular/localize"
     ]
   },
   "files": [
     "src/main.ts",
     "src/main.server.ts",
-    "server.ts"
+    "server.ts",
+    "src/polyfills.ts"
   ],
   "include": [
     "src/**/*.d.ts"
