--- a/frontend/pong-app/angular.json
+++ b/frontend/pong-app/angular.json
@@ -10,6 +10,10 @@
           "es-PR":{
             "translation": "projects/pong/src/locale/messages.es.xlf",
             "baseHref": "es-PR"
+          },
+          "fr-FR": {
+            "translation": "projects/pong/src/locale/messages.fr.xlf",
+            "baseHref": "fr-FR"
           }
         }
       },
@@ -23,7 +27,8 @@
           "builder": "@angular-devkit/build-angular:application",
           "options": {
             "localize": [
-              "es-PR"
+              "es-PR",
+              "fr-FR"
             ],
             "outputPath": "dist/pong",
             "index": "projects/pong/src/index.html",
