--- a/nginx/Dockerfile
+++ b/nginx/Dockerfile
@@ -1,5 +1,5 @@
 # Second stage: build the Nginx server
-FROM nginx:1.23-alpine
+FROM nginx:1.26
 
 # Copying our .conf files
 COPY ./nginx.conf /etc/nginx/conf.d/nginx.conf 
