i18n not working for ng build process

--- a/frontend/Dockerfile.prod
+++ b/frontend/Dockerfile.prod
@@ -4,10 +4,12 @@ FROM node:20 as build
 # Establecer el directorio de trabajo dentro del contenedor
 WORKDIR /usr/src/app/pong-app
 # Copiar el archivo package.json y package-lock.json (si existe)
+COPY pong-app/package*.json ./
 
 #RUN npm install -g @angular/cli@17
 RUN npm install
 RUN npx ngcc --properties es2023 browser module main --first-only --create-ivy-entry-points
+COPY ./pong-app .
 RUN npm run build
 
 # COPY ./entrypoint.sh /entrypoint.sh
