devops module not done, no funciona bien la precarga de los dashboards a grafanay falta provar despues alerts

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -101,9 +101,12 @@ services:
     container_name: prometheus
     restart: unless-stopped
     user: root
+
     volumes:
-      - /sgoinfre/students/abasante/transcendence/prometheus.yml:/etc/prometheus/prometheus.yml:ro
+      #- /sgoinfre/students/abasante/transcendence/prometheus.yml:/etc/prometheus/prometheus.yml:ro
+      - ./prometheus.yml:/etc/prometheus/prometheus.yml:ro
       - prometheus_data:/prometheus
+      - ./grafana/alert.rules.yml:/etc/prometheus/alert.rules.yml:ro
     command:
       - '--config.file=/etc/prometheus/prometheus.yml'
       - '--storage.tsdb.path=/prometheus'
@@ -112,6 +115,16 @@ services:
       - '--web.enable-lifecycle'
     ports:
       - '9090:9090'
+    networks:
+      - app-network
+  
+  alertmanager:
+    image: prom/alertmanager
+    container_name: alertmanager
+    ports:
+      - "9093:9093"
+    volumes:
+      - ./grafana/config.yml:/etc/alertmanager/config.yml
     networks:
       - app-network
   
