--- a/grafana/provisioning/datasources/datasources.yml
+++ b/grafana/provisioning/datasources/datasources.yml
@@ -1,3 +1,21 @@
+# apiVersion: 1
+# datasources:
+#   - name: Prometheus
+#     type: prometheus
+#     access: proxy
+#     orgId: 1
+#     url: http://localhost:9090
+#     isDefault: true
+#     editable: true
+#   - name: Node-exporter
+#     type: prometheus
+#     acess: proxy
+#     url: http://localhost:9100
+#   - name: postgres-exporter
+#     type: postgres-exporter
+#     acess: proxy
+#     url: http://localhost:9187
+
 apiVersion: 1
 datasources:
   - name: Prometheus
@@ -7,3 +25,13 @@ datasources:
     url: http://prometheus:9090
     isDefault: true
     editable: true
+  - name: Node-exporter
+    type: prometheus
+    access: proxy
+    orgId: 1
+    url: http://node-exporter:9100
+  - name: Postgres Exporter
+    type: prometheus
+    access: proxy
+    orgId: 1
+    url: http://pg-exporter:9187
