funciona todo pero esta el tema de root que aver como arreglamos

--- a/grafana/alertmanager.yml
+++ b/grafana/alertmanager.yml
@@ -15,4 +15,4 @@ receivers:
         from: 'transcendence.simplepong@gmail.com'
         smarthost: 'smtp.gmail.com:587'
         auth_username: 'transcendence.simplepong'
-        auth_password: 'password0.'
+        auth_password: 'feov cjkg mylj aise'
