--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -120,11 +120,12 @@ services:
   
   alertmanager:
     image: prom/alertmanager
+    user: root
     container_name: alertmanager
     ports:
       - "9093:9093"
     volumes:
-      - ./grafana/config.yml:/etc/alertmanager/config.yml
+      w- ./grafana/alertmanager.yml:/etc/alertmanager/alertmanager.yml
     networks:
       - app-network
   
