--- a/frontend/Dockerfile.prod
+++ b/frontend/Dockerfile.prod
@@ -8,8 +8,9 @@ COPY pong-app/package*.json ./
 
 #RUN npm install -g @angular/cli@17
 RUN npm install
-RUN npx ngcc --properties es2023 browser module main --first-only --create-ivy-entry-points
 COPY ./pong-app .
+WORKDIR /usr/src/app/pong-app/pong-app
+RUN npx ngcc --properties es2023 browser module main --first-only --create-ivy-entry-points
 RUN npm run build
 
 # COPY ./entrypoint.sh /entrypoint.sh
@@ -20,15 +21,16 @@ RUN npm run build
 # ENTRYPOINT /entrypoint.sh
 
 FROM nginx:1.26
-COPY --from=build /usr/src/app/pong-app/pong-app /usr/share/nginx/html
+COPY --from=build /usr/src/app/pong-app/pong-app/* /usr/share/nginx/html
 # Install OpenSSL
 RUN apt-get update && apt-get install -y openssl
 
 # Generate SSL certificates
-RUN mkdir -p /etc/nginx/ssl && \
-    openssl req -x509 -nodes -days 365 -newkey rsa:2048 \
-    -keyout /etc/nginx/ssl/nginx.key \
-    -out /etc/nginx/ssl/nginx.crt \
-    -subj "/C=Spain/L=Urduliz/O=Transcendence/CN=transcendence.com"
+RUN openssl genrsa -out /etc/nginx/server.key && \
+    openssl req -new -key /etc/nginx/server.key -subj "/CN=lagonzal" -out /etc/nginx/server.csr && \
+    openssl x509 -req -days 365 -in /etc/nginx/server.csr -signkey /etc/nginx/server.key -out /etc/nginx/server.crt
+
+COPY ./nginx.conf /etc/nginx/nginx.conf
 
 # ...existing code...
+ENTRYPOINT nginx -g "daemon off;"
