--- a/frontend/Dockerfile.prod
+++ b/frontend/Dockerfile.prod
@@ -13,15 +13,12 @@ WORKDIR /usr/src/app/pong-app/pong-app
 RUN npx ngcc --properties es2023 browser module main --first-only --create-ivy-entry-points
 RUN npm run build
 
-# COPY ./entrypoint.sh /entrypoint.sh
-
-# RUN chmod +x /entrypoint.sh
-
-# # Ejecutar el servidor de desarrollo de Angular
-# ENTRYPOINT /entrypoint.sh
-
+# Segunda etapa - Nginx
 FROM nginx:1.26
-COPY --from=build /usr/src/app/pong-app/pong-app/* /usr/share/nginx/html
+
+# Copiar los archivos de build de Angular
+COPY --from=build /usr/src/app/pong-app/dist/pong/* /usr/share/nginx/html/
+
 # Install OpenSSL
 RUN apt-get update && apt-get install -y openssl
 
@@ -32,5 +29,4 @@ RUN openssl genrsa -out /etc/nginx/server.key && \
 
 COPY ./nginx.conf /etc/nginx/nginx.conf
 
-# ...existing code...
 ENTRYPOINT nginx -g "daemon off;"
