--- a/frontend/nginx.conf
+++ b/frontend/nginx.conf
@@ -1,5 +1,6 @@
 events{}
 http{
+    include /etc/nginx/mime.types;
     server {
         listen 443 ssl;
         server_name localhost;
@@ -7,29 +8,25 @@ http{
         ssl_certificate /etc/nginx/server.crt;
         ssl_certificate_key /etc/nginx/server.key;
 
-        location / 
-        {
-            root /usr/share/nginx/html;  #Path to static content
-            index index.html index.htm;
-            try_files $uri /index.html;
+        location / {
+            root /usr/share/nginx/html/en-US;  # Point to the en-US directory
+            index index.html;
+            try_files $uri $uri/ /index.html =404;
         }
 
         # Reverse Proxy to django
-        location /backend/ 
-        {
+        location /backend/ {
             rewrite ^/backend(/.*)$ $1 break;
             
-            proxy_pass http://backend:8000;  # Backend container address and port
+            proxy_pass http://backend:8000;
             proxy_http_version 1.1;
             
-            # WebSocket specific headers
             proxy_set_header Upgrade $http_upgrade;
             proxy_set_header Connection "Upgrade";
             proxy_set_header Host $host;
             proxy_set_header X-Real-IP $remote_addr;
             proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
 
-            # Optional: Increase buffer size for WebSockets
             proxy_read_timeout 3600s;
             proxy_send_timeout 3600s;
         }
