--- a/frontend/Dockerfile.prod
+++ b/frontend/Dockerfile.prod
@@ -10,7 +10,7 @@ COPY pong-app/package*.json ./
 RUN npm install
 COPY ./pong-app .
 WORKDIR /usr/src/app/pong-app/pong-app
-RUN npx ngcc --properties es2023 browser module main --first-only --create-ivy-entry-points
+RUN npx ngcc --properties es2023 
 RUN npm run build
 
 # Segunda etapa - Nginx
