--- a/frontend/nginx.conf
+++ b/frontend/nginx.conf
@@ -1,6 +1,12 @@
 events{}
-http{
+http {
     include /etc/nginx/mime.types;
+    
+    types {
+        application/javascript mjs js;
+        text/css css;
+    }
+
     server {
         listen 443 ssl;
         server_name localhost;
@@ -8,25 +14,32 @@ http{
         ssl_certificate /etc/nginx/server.crt;
         ssl_certificate_key /etc/nginx/server.key;
 
+        root /usr/share/nginx/html;
+
+        # Handle root path
         location / {
-            root /usr/share/nginx/html/en-US;  # Point to the en-US directory
+            root /usr/share/nginx/html/en-US;
             index index.html;
-            try_files $uri $uri/ /index.html =404;
+            try_files $uri $uri/ /index.html;
+        }
+
+        # Handle static files
+        location ~ \.(js|mjs|css|png|jpg|jpeg|gif|ico|woff|woff2|ttf|svg|eot)$ {
+            try_files $uri /en-US/$uri =404;
+            expires max;
+            add_header Cache-Control "public, no-transform";
         }
 
         # Reverse Proxy to django
         location /backend/ {
             rewrite ^/backend(/.*)$ $1 break;
-            
             proxy_pass http://backend:8000;
             proxy_http_version 1.1;
-            
             proxy_set_header Upgrade $http_upgrade;
             proxy_set_header Connection "Upgrade";
             proxy_set_header Host $host;
             proxy_set_header X-Real-IP $remote_addr;
             proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-
             proxy_read_timeout 3600s;
             proxy_send_timeout 3600s;
         }
