--- a/frontend/nginx.conf
+++ b/frontend/nginx.conf
@@ -14,6 +14,12 @@ http {
         ssl_certificate /etc/nginx/server.crt;
         ssl_certificate_key /etc/nginx/server.key;
 
+        # Add CORS headers
+        add_header 'Access-Control-Allow-Origin' 'https://localhost:8089' always;
+        add_header 'Access-Control-Allow-Methods' 'GET, POST, OPTIONS, PUT, DELETE' always;
+        add_header 'Access-Control-Allow-Headers' 'DNT,User-Agent,X-Requested-With,If-Modified-Since,Cache-Control,Content-Type,Range,Authorization' always;
+        add_header 'Access-Control-Expose-Headers' 'Content-Length,Content-Range' always;
+
         root /usr/share/nginx/html;
 
         # Handle root path
@@ -32,16 +38,38 @@ http {
 
         # Reverse Proxy to django
         location /backend/ {
+            if ($request_method = 'OPTIONS') {
+                add_header 'Access-Control-Allow-Origin' 'https://localhost:8089' always;
+                add_header 'Access-Control-Allow-Methods' 'GET, POST, OPTIONS, PUT, DELETE' always;
+                add_header 'Access-Control-Allow-Headers' 'DNT,User-Agent,X-Requested-With,If-Modified-Since,Cache-Control,Content-Type,Range,Authorization' always;
+                add_header 'Access-Control-Max-Age' 1728000;
+                add_header 'Content-Type' 'text/plain; charset=utf-8';
+                add_header 'Content-Length' 0;
+                return 204;
+            }
+
             rewrite ^/backend(/.*)$ $1 break;
             proxy_pass http://backend:8000;
             proxy_http_version 1.1;
-            proxy_set_header Upgrade $http_upgrade;
-            proxy_set_header Connection "Upgrade";
             proxy_set_header Host $host;
             proxy_set_header X-Real-IP $remote_addr;
             proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-            proxy_read_timeout 3600s;
-            proxy_send_timeout 3600s;
+            proxy_set_header X-Forwarded-Proto $scheme;
+            proxy_set_header X-Forwarded-Host $host;
+            proxy_set_header X-Forwarded-Port $server_port;
+            
+            # Debug headers
+            add_header X-Debug-Backend-URL $upstream_addr;
+            add_header X-Debug-Request-URI $request_uri;
+            
+            # Error handling
+            proxy_intercept_errors on;
+            error_page 502 = @backend_down;
+        }
+
+        location @backend_down {
+            return 502 '{"error": "Backend service unavailable"}';
+            add_header Content-Type application/json;
         }
     }
 }
