--- a/frontend/nginx.conf
+++ b/frontend/nginx.conf
@@ -22,16 +22,20 @@ http {
 
         root /usr/share/nginx/html;
 
+        # Handle i18n files
+        location /i18n/ {
+            alias /usr/share/nginx/html/assets/i18n/;
+            try_files $uri $uri/ =404;
+            add_header Cache-Control "no-cache";
+        }
+
         # Handle root path
         location / {
-            root /usr/share/nginx/html/en-US;
-            index index.html;
             try_files $uri $uri/ /index.html;
         }
 
         # Handle static files
-        location ~ \.(js|mjs|css|png|jpg|jpeg|gif|ico|woff|woff2|ttf|svg|eot)$ {
-            try_files $uri /en-US/$uri =404;
+        location ~ \.(js|mjs|css|png|jpg|jpeg|gif|ico|json|woff|woff2|ttf|svg|eot)$ {
             expires max;
             add_header Cache-Control "public, no-transform";
         }
