--- a/frontend/nginx.conf
+++ b/frontend/nginx.conf
@@ -14,30 +14,35 @@ http {
         ssl_certificate /etc/nginx/server.crt;
         ssl_certificate_key /etc/nginx/server.key;
 
+        root /usr/share/nginx/html;
+
         # Add CORS headers
         add_header 'Access-Control-Allow-Origin' 'https://localhost:8089' always;
         add_header 'Access-Control-Allow-Methods' 'GET, POST, OPTIONS, PUT, DELETE' always;
         add_header 'Access-Control-Allow-Headers' 'DNT,User-Agent,X-Requested-With,If-Modified-Since,Cache-Control,Content-Type,Range,Authorization' always;
         add_header 'Access-Control-Expose-Headers' 'Content-Length,Content-Range' always;
 
-        root /usr/share/nginx/html;
-
-        # Handle i18n files
-        location /i18n/ {
-            alias /usr/share/nginx/html/assets/i18n/;
-            try_files $uri $uri/ =404;
-            add_header Cache-Control "no-cache";
+        # Handle localized paths
+        location ~ "^/[a-z]{2}-[A-Z]{2}" {
+            rewrite "^/[a-z]{2}-[A-Z]{2}/(.*)" /$1 last;
         }
 
-        # Handle root path
-        location / {
-            try_files $uri $uri/ /index.html;
+        # Handle assets and i18n files
+        location /assets/ {
+            alias /usr/share/nginx/html/assets/;
+            try_files $uri $uri/ =404;
+            add_header Cache-Control "public, max-age=31536000";
         }
 
         # Handle static files
         location ~ \.(js|mjs|css|png|jpg|jpeg|gif|ico|json|woff|woff2|ttf|svg|eot)$ {
-            expires max;
-            add_header Cache-Control "public, no-transform";
+            try_files $uri $uri/ /index.html;
+            add_header Cache-Control "public, max-age=31536000";
+        }
+
+        # Handle all other routes
+        location / {
+            try_files $uri $uri/ /index.html;
         }
 
         # Reverse Proxy to django
