--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,6 +1,6 @@
 services:
   db:
-    image: postgres
+    image: postgres:17
     container_name: postgres
     volumes:
       - postgres-data:/var/lib/postgresql/data
@@ -12,8 +12,6 @@ services:
       - app-network
     env_file:
       - .env
-    ports:
-      - "5432:5432"
 
   backend:
     container_name: backend
@@ -22,10 +20,8 @@ services:
       dockerfile: Dockerfile
     volumes:
       - .:/code
-    ports:
-      - "8000:8000" 
-    # expose:
-    #   - "8000"
+    expose:
+      - "8000"
     # environment:
     #   - DB_NAME=postgres
     #   - DB_USER=postgres
@@ -52,13 +48,11 @@ services:
     container_name: frontend
     build:
       context: ./frontend
-      dockerfile: Dockerfile
-    volumes:
-      - ./frontend:/usr/src/app  # Montar el directorio local en el contenedor
+      dockerfile: Dockerfile.prod
+    # volumes:
+    #   - ./frontend:/usr/src/app  # Montar el directorio local en el contenedor
     ports:
-      - "4200:4200"
-      - "4201:4201"
-      - "4202:4202"
+      - "8089:443"
     depends_on:
       - backend
     networks:
@@ -101,12 +95,9 @@ services:
     container_name: prometheus
     restart: unless-stopped
     user: root
-
     volumes:
-      #- /sgoinfre/students/abasante/transcendence/prometheus.yml:/etc/prometheus/prometheus.yml:ro
-      - ./prometheus.yml:/etc/prometheus/prometheus.yml:ro
+      - /sgoinfre/students/abasante/transcendence/prometheus.yml:/etc/prometheus/prometheus.yml:ro
       - prometheus_data:/prometheus
-      - ./grafana/alert.rules.yml:/etc/prometheus/alert.rules.yml:ro
     command:
       - '--config.file=/etc/prometheus/prometheus.yml'
       - '--storage.tsdb.path=/prometheus'
@@ -118,19 +109,8 @@ services:
     networks:
       - app-network
   
-  alertmanager:
-    image: prom/alertmanager
-    user: root
-    container_name: alertmanager
-    ports:
-      - "9093:9093"
-    volumes:
-      - ./grafana/alertmanager.yml:/etc/alertmanager/alertmanager.yml
-    networks:
-      - app-network
-  
   grafana:
-    #image: grafana/grafana-enterprise
+    # image: grafana/grafana-enterprise
     build:
       context: .
       dockerfile: Dockerfile
@@ -138,10 +118,10 @@ services:
     restart: unless-stopped
     ports:
      - '3000:3000'
-    #volumes:
-      #- grafana-storage:/var/lib/grafana
-      # - ./grafana/dashboards:/var/lib/grafana/dashboards
-      # - ./grafana/provisioning:/etc/grafana/provisioning
+    # volumes:
+    #   - grafana-storage:/var/lib/grafana
+    #   - ./grafana/dashboards:/var/lib/grafana/dashboards
+    #   - ./grafana/provisioning:/etc/grafana/provisioning
     environment:
     - GF_SECURITY_ADMIN_USER=admin
     - GF_SECURITY_ADMIN_PASSWORD=admin
@@ -173,6 +153,5 @@ volumes:
   postgres-data:
     name: postgres_data
     driver: local
-  #grafana-storage: {}
+  # grafana-storage: {}
   prometheus_data: {}
-  grafana-provisioning: {}
