player conection status works but the chat websocket is still not working

--- a/frontend/nginx.conf
+++ b/frontend/nginx.conf
@@ -22,6 +22,13 @@ http {
         add_header 'Access-Control-Allow-Headers' 'DNT,User-Agent,X-Requested-With,If-Modified-Since,Cache-Control,Content-Type,Range,Authorization' always;
         add_header 'Access-Control-Expose-Headers' 'Content-Length,Content-Range' always;
 
+        # Special handling for verify endpoint with query parameters
+        location = /verify {
+            try_files /index.html =404;
+            add_header Cache-Control "no-store, no-cache, must-revalidate" always;
+            add_header X-Debug-Original-URI $request_uri always;
+        }
+
         # Handle localized paths
         location ~ "^/[a-z]{2}-[A-Z]{2}" {
             rewrite "^/[a-z]{2}-[A-Z]{2}/(.*)" /$1 last;
@@ -40,9 +47,34 @@ http {
             add_header Cache-Control "public, max-age=31536000";
         }
 
+        # WebSocket connections
+        location /backend/ws/ {
+            proxy_pass http://backend:8000/ws/;
+            proxy_http_version 1.1;
+            proxy_set_header Upgrade $http_upgrade;
+            proxy_set_header Connection "upgrade";
+            proxy_set_header Host $host;
+            proxy_set_header X-Real-IP $remote_addr;
+            proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+            proxy_set_header X-Forwarded-Proto $scheme;
+            
+            # WebSocket specific settings
+            proxy_read_timeout 86400;
+            proxy_send_timeout 86400;
+            
+            # Debug headers
+            add_header X-Debug-Backend-URL $upstream_addr;
+            add_header X-Debug-Request-URI $request_uri;
+        }
+
         # Handle all other routes
         location / {
-            try_files $uri $uri/ /index.html;
+            # Don't add a trailing slash which would cause redirects
+            try_files $uri $uri/ /index.html =404;
+            # For debugging purposes
+            add_header X-Debug-Original-URI $request_uri always;
+            # Disable caching for dynamic routes
+            add_header Cache-Control "no-store, no-cache, must-revalidate" always;
         }
 
         # Reverse Proxy to django
