Changes to the backend entrypoint to make migrations for all the apps

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -19,7 +19,7 @@ services:
       context: ./backend
       dockerfile: Dockerfile
     volumes:
-      - .:/code
+      - ./backend:/code/backend
     expose:
       - "8000"
     # environment:
