--- a/frontend/pong-app/tsconfig.json
+++ b/frontend/pong-app/tsconfig.json
@@ -21,7 +21,9 @@
     "lib": [
       "ES2022",
       "dom"
-    ]
+    ],
+    "removeComments": false,
+    "pretty": true,
   },
   "angularCompilerOptions": {
     "enableI18nLegacyMessageIdFormat": false,
