Change to nginx conf

--- a/frontend/nginx.conf
+++ b/frontend/nginx.conf
@@ -36,6 +36,7 @@ http {
 
         # Handle assets and i18n files
         location /assets/ {
+            allowed_methods GET, PUT;
             alias /usr/share/nginx/html/assets/;
             try_files $uri $uri/ =404;
             add_header Cache-Control "public, max-age=31536000";
