Avatars now working

--- a/frontend/nginx.conf
+++ b/frontend/nginx.conf
@@ -36,7 +36,6 @@ http {
 
         # Handle assets and i18n files
         location /assets/ {
-            allowed_methods GET, PUT;
             alias /usr/share/nginx/html/assets/;
             try_files $uri $uri/ =404;
             add_header Cache-Control "public, max-age=31536000";
@@ -62,23 +61,33 @@ http {
             # WebSocket specific settings
             proxy_read_timeout 86400;
             proxy_send_timeout 86400;
+        }
+
+        # FIXED: Media files handling - this must come BEFORE the /backend/ location block
+        location ^~ /backend/media/ {
+            # Direct proxy to backend media directory with correct path
+            proxy_pass http://backend:8000/media/;
+            
+            # Set proper headers
+            proxy_set_header Host $host;
+            proxy_set_header X-Real-IP $remote_addr;
+            
+            # Important for binary files
+            proxy_buffering off;
+            
+            # CORS headers specifically for media files
+            add_header 'Access-Control-Allow-Origin' '*' always;
+            add_header 'Access-Control-Allow-Methods' 'GET, OPTIONS' always;
+            
+            # Proper MIME type handling
+            include /etc/nginx/mime.types;
             
             # Debug headers
-            add_header X-Debug-Backend-URL $upstream_addr;
-            add_header X-Debug-Request-URI $request_uri;
+            add_header X-Debug-Media-Path $uri always;
+            add_header X-Original-URI $request_uri always;
         }
 
-        # Handle all other routes
-        location / {
-            # Don't add a trailing slash which would cause redirects
-            try_files $uri $uri/ /index.html =404;
-            # For debugging purposes
-            add_header X-Debug-Original-URI $request_uri always;
-            # Disable caching for dynamic routes
-            add_header Cache-Control "no-store, no-cache, must-revalidate" always;
-        }
-
-        # Reverse Proxy to django
+        # Reverse Proxy to django - this comes AFTER the media location
         location /backend/ {
             if ($request_method = 'OPTIONS') {
                 add_header 'Access-Control-Allow-Origin' 'https://localhost:8089' always;
@@ -112,6 +121,16 @@ http {
         location @backend_down {
             return 502 '{"error": "Backend service unavailable"}';
             add_header Content-Type application/json;
+        }
+
+        # Handle all other routes - this must be LAST
+        location / {
+            # Don't add a trailing slash which would cause redirects
+            try_files $uri $uri/ /index.html =404;
+            # For debugging purposes
+            add_header X-Debug-Original-URI $request_uri always;
+            # Disable caching for dynamic routes
+            add_header Cache-Control "no-store, no-cache, must-revalidate" always;
         }
     }
 }
